Fix hidden publication icon on small screens

--- a/assets/css/_publis-projects.scss
+++ b/assets/css/_publis-projects.scss
@@ -2,6 +2,10 @@
     position: relative;
     margin-bottom: 26px;
 
+    @media (max-width: 767px) {
+        margin-left: 20px;
+    }
+
     .icon {
         position: absolute;
         left: -27px;
